# donation-management

./: .gitignore  README.md  pyproject.toml  rest_test.sh  resttest.sh
donman/: __init__.py  cli.py  config.py  model.py  requirements.txt  run.py
donman/controller/: __init__.py  distribution.py  donation.py  donor.py  report.py  staff.py  type.py
sql/: schema.sql
