[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donman"
version = "0.1.0"
dependencies = [
    "Flask",
    "requests",
    "Flask-SQLAlchemy",
    "flask-restful",
    "flask-bcrypt", 
    "flask-migrate"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["donman"]
